--- a/sitio_css/contacto.css
+++ b/sitio_css/contacto.css
@@ -269,11 +269,16 @@ body {
   .map-container {
     display: flex;
     justify-content: center;
+    gap:20px;
   }
   
   .map-container iframe {
     max-width: 100%;
-    height: 300px;
+    height: 500px;
+  }
+  
+   .map-container iframe {
+    background-color: white;
   }
   
   .footer {
